<resources>
    <string name="app_name">JoggingRoutes</string>
    <string name="detail_button"> Pokaż trasę </string>
    <string name="route_name"> Nazwa trasy </string>
    <string name="route_view"> Widok trasy </string>
    <string name="get_dir"> Get Direction </string>
    <string name="google_maps_key"> AIzaSyDyWOogYGlm4WhNOtELW1_17aFkOITxzvQ </string>
    <string name="joggingroutes">JoggingRoutes</string>
    <string name="loading_data">Loading Data</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="see_stats">See stats</string>
    <string name="your_personal_best">Your personal best:</string>
    <string name="your_last_result">Your last result:</string>
    <string name="all_results_for_this_rute">All results for this rute:</string>
</resources>