<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#000000">

    <TextView
        android:id="@+id/time_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_button"
            android:layout_width="50sp"
            android:layout_height="30sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="3sp"
            android:layout_marginRight="3sp"
            android:paddingLeft="2dp"
            android:paddingTop="2dp"
            android:paddingRight="2dp"
            android:paddingBottom="2dp"
            android:text="@string/start"
            android:textColor="#000000"
            android:textSize="10sp"
            app:backgroundTint="#FFFFFF" />

        <Button
            android:id="@+id/stop_button"
            android:layout_width="50sp"
            android:layout_height="30sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="3sp"
            android:layout_marginLeft="3sp"
            android:paddingLeft="2dp"
            android:paddingTop="2dp"
            android:paddingRight="2dp"
            android:paddingBottom="2dp"
            android:text="@string/stop"
            android:textColor="#000000"
            android:textSize="10sp"
            app:backgroundTint="#FFFFFF" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reset_button"
            android:layout_width="50sp"
            android:layout_height="30sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="3sp"
            android:layout_marginRight="3sp"
            android:paddingLeft="2dp"
            android:paddingTop="2dp"
            android:paddingRight="2dp"
            android:paddingBottom="2dp"
            android:text="@string/reset"
            android:textColor="#000000"
            android:textSize="10sp"
            app:backgroundTint="#FFFFFF" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="50sp"
            android:layout_height="30sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="3sp"
            android:layout_marginLeft="3sp"
            android:paddingLeft="2dp"
            android:paddingTop="2dp"
            android:paddingRight="2dp"
            android:paddingBottom="2dp"
            android:text="@string/save"
            android:textColor="#000000"
            android:textSize="10sp"
            app:backgroundTint="#FFFFFF" />
    </LinearLayout>

</LinearLayout>