<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fullscreen_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="120dp"
            android:fontFamily="casual"
            android:gravity="center_horizontal|top"
            android:keepScreenOn="true"
            android:text="@string/joggingroutes"
            android:textColor="#ffffff"
            android:textSize="50sp"
            android:textStyle="bold"
            tools:ignore="ObsoleteLayoutParam" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/nickRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:width="300dp"
                        android:backgroundTint="#ffffff"
                        android:ems="10"
                        android:fontFamily="casual"
                        android:hint="@string/username"
                        android:inputType="textPersonName"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#ffffff"
                        tools:targetApi="lollipop" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/passwordRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="300dp"
                        android:backgroundTint="#ffffff"
                        android:ems="10"
                        android:fontFamily="casual"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#ffffff"
                        tools:targetApi="lollipop" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/repeatPasswordRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="300dp"
                        android:backgroundTint="#ffffff"
                        android:ems="10"
                        android:fontFamily="casual"
                        android:hint="@string/repeat_password"
                        android:inputType="textPassword"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#ffffff"
                        tools:targetApi="lollipop" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="horizontal"
                    android:paddingLeft="80dp"
                    android:paddingTop="10dp"
                    tools:ignore="RtlHardcoded,RtlSymmetry">

                    <Button
                        android:id="@+id/registerButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="casual"
                        android:text="@string/register"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        app:backgroundTint="#FFFFFF" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|right"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/goLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:padding="10sp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>